samples/_failures_safe/1761712042_64cbb4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_245abbf8.c: In function ‘main’:
./samples/SAFE/__tmp_245abbf8.c:155:16: error: missing terminating " character
  155 |         printf("\nVerification: FAILED - Data does not match
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_245abbf8.c:155:9: error: expected expression at end of input
  155 |         printf("\nVerification: FAILED - Data does not match
      |         ^~~~~~
./samples/SAFE/__tmp_245abbf8.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_245abbf8.c:155:9: error: expected declaration or statement at end of input
